// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignatureContainer Renders 1`] = `
<mapProps(SignatureContainer)
  Container={[Function]}
  email="your.name@telstra.purple.net"
  mobile="+61 111 222 333"
  name="your name"
  sigType="purple"
  title="Job Title"
  twitter="@myTwitter"
/>
`;

exports[`SignatureContainer Renders with support fields 1`] = `
<mapProps(SignatureContainer)
  Container={[Function]}
  email="your.name@telstra.purple.net"
  mobile="+61 111 222 333"
  name="your name"
  sigType="support"
  title="Job Title"
  twitter="@myTwitter"
/>
`;

exports[`createContainer returns the right props 1`] = `
Object {
  "Container": undefined,
  "containerProps": Object {
    "CopyRepliesAndForwardsHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopyRepliesAndForwardsText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "CopySignatureHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopySignatureText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "signatureProps": Object {
      "email": "your.name@telstra.purple.net",
      "isSupport": false,
      "mobile": "+61 111 222 333",
      "name": "your name",
      "title": "Job Title",
      "twitter": "@myTwitter",
    },
  },
}
`;

exports[`createContainer returns the right props 2`] = `
Object {
  "Container": undefined,
  "containerProps": Object {
    "CopyRepliesAndForwardsHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopyRepliesAndForwardsText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "CopySignatureHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopySignatureText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "signatureProps": Object {
      "email": "your.name@telstra.purple.net",
      "isSupport": false,
      "mobile": "+61 111 222 333",
      "name": "your name",
      "title": "Job Title",
      "twitter": "@myTwitter",
    },
  },
}
`;
